Fix amp-lightbox-gallery transition when things on the page have z-index.

--- a/extensions/amp-lightbox-gallery/0.1/amp-lightbox-gallery.css
+++ b/extensions/amp-lightbox-gallery/0.1/amp-lightbox-gallery.css
@@ -274,16 +274,6 @@ amp-lightbox-gallery .amp-carousel-button {
   display: block;
 }
 
-.i-amphtml-lightbox-gallery-trans {
-  pointer-events: none !important;
-  position: fixed !important;
-  z-index: 1001 !important;
-  top: 0 !important;
-  left: 0 !important;
-  bottom: 0 !important;
-  right: 0 !important;
-}
-
 /*
  * This is necessary to fix responsive styling for video and ad
  * elements inside the lightbox. More investigation is necessary
